update bug that prevented scrollbar from showing

--- a/public/components/scroll/scroll.less
+++ b/public/components/scroll/scroll.less
@@ -62,7 +62,7 @@
 	bottom: 3px;
 	right: 0;
 	cursor: pointer;
-	z-index: 1;
+	z-index: 3;
 
 	button {
 		background: rgba(50, 50, 50, .25);
